# grammi

./: README.md  grammi.dockerfile  main.py  pyproject.toml
data/database/: about_databse_folder.md
migrations/: env.py
migrations/versions/: 7a010df77f19_init.py
src/bot/core/: aiobot.py  localization.py  t_cc.py
src/bot/features/imgbw/: __init__.py  imgbw_callback.py  imgbw_handler.py  imgbw_router.py
src/bot/features/imgbw/locales/: en.json
src/bot/features/imgupload/: __init__.py  imgupload_callback.py  imgupload_handler.py  imgupload_router.py
src/bot/features/imgupload/locales/: en.json
src/bot/features/onboarding/: __init__.py  start_handler.py  start_router.py
src/bot/features/onboarding/locales/: en.json
src/bot/middleware/: cc_middleware.py  db_middleware.py
src/database/: db_adapter.py  models.py
